--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 requests~=2.28.1
-fastapi~=0.95.0
+fastapi~=0.85.2
 aiogram>=2.0,<3.0
 environs==8.0.0
+uvicorn~=0.19.0
+python-dotenv~=0.19.2
+dataclasses~=0.8
